# runeOS

./: .clang-format  .clang-tidy  .gitignore  3RDPARTY.md  CHANGELOG.md  CI-Checker.sh  CONTRIBUTING.md  FormatCode.sh  LintCode.sh  README.md  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: ✨-feature-request.md  🐛-bug-report.md
.github/workflows/: on-pull-request.yml  publish-test-report.yml  pull-request.yml
App/Crucible/: Crucible.service  meson.build
App/Crucible/Include/: Build.h  Crucible.h
App/Crucible/Include/Crucible/: AST.h  Action.h  AutoCompletion.h  BuiltInCommand.h  Environment.h  Interpreter.h  Lexer.h  Parser.h  Path.h  Utility.h
App/Crucible/Src/: Crucible.cpp
App/Crucible/Src/Crucible/: AST.cpp  Action.cpp  AutoCompletion.cpp  BuiltInCommand.cpp  Environment.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp  Path.cpp  Utility.cpp
App/Freya/: Template.service  meson.build
App/Freya/include/Freya/: DependencyGraph.h  ExitCode.h  Service.h  ServiceLoader.h  ServiceStarter.h  Version.h
App/Freya/src/: ExitCode.cpp  Service.cpp  ServiceLoader.cpp  ServiceStarter.cpp  main.cpp
App/Freya/src/Freya/: DependencyGraph.cpp  Service.cpp  ServiceLoader.cpp  ServiceStarter.cpp
App/Freya/subprojects/yaml-cpp/: meson.build
App/Freya/subprojects/yaml-cpp/src/: main.cpp
App/cat/: SConstruct  meson.build  x86_64-rune.txt
App/cat/Src/: SConscript  cat.cpp
App/cp/: SConstruct  meson.build
App/cp/Src/: SConscript  cp.cpp
App/echo/: SConstruct  meson.build
App/echo/Src/: SConscript  echo.cpp
App/ls/: SConstruct  meson.build
App/ls/Src/: SConscript  ls.cpp
App/mkdir/: SConstruct  meson.build
App/mkdir/Src/: SConscript  mkdir.cpp
App/mv/: SConstruct  meson.build
App/mv/Src/: SConscript  mv.cpp
App/rm/: SConstruct  meson.build
App/rm/Src/: SConscript  rm.cpp
App/touch/: SConstruct  meson.build
App/touch/Src/: SConscript  touch.cpp
Brokk/: Brokk-Config-Template.yaml  Brokk.py  x86_64-rune-Template.txt
Brokk/CI/: CI.yaml  IntegrationTest.service
Brokk/Resource/: Debug.py  Start.py
Brokk/Ressource/: Debug.py  Start.py  limine.conf
Brokk/Scripts/: Build-All.py  Install-App.sh  Setting.py
Brokk/Src/: Build-Image.sh  Build.py  Config.py  Copy-File-To-Image.sh  Deploy.sh  Engine.py  Install.sh  __init__.py
Brokk/Src/Steps/: CrucibleBuild.py  Deploy.py  DeployApps.py  FileCopy.py  ImageBuild.py  Install.py  InstallApps.py  IntegrationTestBuild.py  KernelBuild.py  KernelPreBuild.py  OSBuild.py  SystemLoaderBuild.py
Brokkr/: Brokkr.py
Brokkr/Ressource/: Debug.py  Start.py
Brokkr/Scripts/: Build-All.py  Build-Image.sh  Install-App.sh  Install.sh  Setting.py
Forge/: SConstruct_Userspace_Template
Forge/Src/: DwLibAlloc11.cpp  ForgeMain.cpp  LibAlloc11.cpp  LibAlloc11.h  RuntimeSupport.cpp  SConscript  Start.asm  Userspace.ld  crti.asm
Hammer/Include/Hammer/: Algorithm.h  ByteOrder.h  Collection.h  Definitions.h  Enum.h  Math.h  Memory.h  Path.h  String.h  Utility.h
Hammer/Src/: ByteOrder.cpp  Math.cpp  Memory.cpp  Path.cpp  SConscript  String.cpp
Kernel/: Kernel.ld  SConstruct
Kernel/BuildTools/: Dummy.cpp  GenerateBuildHeader.py  GenerateISRStubsAssembly.py  GenerateISRStubsCPP.py  PSF2ToCPP.py  StripCompileCommandsJson.py
Kernel/Include/App/: App.h  AppModule.h  AppSubsystem.h  ELF.h  ELFLoader.h  TerminalStream.h  VoidStream.h
Kernel/Include/Boot/: Boot.h  Bootstrap.h  DetailedLogLayout.h  FancyLogFormatter.h  LogRegistry.h  limine.h
Kernel/Include/BuiltInPlugin/: 8259PICDriverPlugin.h  ACPIDriverPlugin.h  AHCIDriverPlugin.h  FATDriverPlugin.h  PCIDriverPlugin.h  PITDriverPlugin.h  PS2KeyboardDriverPlugin.h  USBPlugin.h
Kernel/Include/CPU/: CPU.h  CPUModule.h  CPUSubsystem.h  E9Stream.h  IO.h  Job.h
Kernel/Include/Device/: Device.h  DeviceModule.h  DeviceSubsystem.h  PCI.h
Kernel/Include/Ember/: AppBits.h  Definitions.h  Ember.h  Enum.h  Error.h  MemoryBits.h  MemoryProtection.h  NodeDefinitions.h  StatusCode.h  SystemCallID.h  VFSBits.h  VirtualKey.h
Kernel/Include/KRE/: BitsAndBytes.h  Build.h  CppLanguageSupport.h  CppRTS.h  CppRuntimeSupport.h  Logging.h  Math.h  Memory.h  Stream.h  String.h  TypeTraits.h  Utility.h
Kernel/Include/KRuntime/: Build.h  Lat15-Terminus16.h
Kernel/Include/LibK/: Assert.h  (+10 more)
Kernel/Src/Test/: SConscript  meson.build
Kernel/Src/Test/Heimdall/: AssertionHandler.cpp  ConsoleReporter.cpp  Engine.cpp  GnomeReporter.cpp  JUnitReporter.cpp  Reporter.cpp  SConscript  TestRunInfoReporter.cpp  TestTracker.cpp
Kernel/Src/Test/IntegrationTest/: main.cpp
Kernel/Src/Test/IntegrationTest/hre/: ANSIWriter.cpp  HRE.cpp  HString.cpp  JUnitTestList.cpp  JUnitTestSuiteList.cpp  OptionList.cpp  ReporterRegistry.cpp  StdReporter.cpp  TestList.cpp  TestTracker.cpp
Kernel/Src/Test/KernelTest/: Runner.cpp
Kernel/Src/Test/KernelTest/hre/: E9Reporter.cpp  HRE.cpp  RuneReporterRegistry.cpp  TestList.cpp  TestTracker.cpp
Kernel/Src/Test/UnitTest/: Runner.cpp
Kernel/Src/Test/UnitTest/hre/: E9Reporter.cpp  HRE.cpp  HString.cpp  JUnitTestList.cpp  JUnitTestSuiteList.cpp  OptionList.cpp  ReporterRegistry.cpp  TestList.cpp  TestTracker.cpp
Kernel/Tools/: GenerateBuildHeader.py  GenerateISRStubsAssembly.py
OS/: Build.h.in  SConstruct  meson.build  meson.options
OS/BuildTools/: GenerateBuildHeader.py
OS/Include/: Build.h  OS.h  StdIO.h
OS/Include/Shell/: AST.h  Action.h  AutoCompletion.h  BuiltInCommand.h  Environment.h  Interpreter.h  Lexer.h  Parser.h  Path.h  Utility.h
OS/Src/: OS.cpp  SConscript  StdIO.cpp
OS/Src/Shell/: AST.cpp  Action.cpp  AutoCompletion.cpp  BuiltInCommand.cpp  Environment.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp  Path.cpp  Utility.cpp
Pickaxe/Src/: AppManagement.cpp  MemoryManagement.cpp  SConscript  SystemCall-a.asm  SystemCall.cpp  ThreadManagement.cpp  VFS.cpp
Toolkit/: BuildBareMetalCompiler.sh  BuildHostCompiler.sh  BuildImage.sh  Install.sh  rune-toolkit-settings.json  runeToolkit.py
Toolkit/Ressource/: DebugRuneOS.py  config.gcc
Toolkit/Scripts/: Build-Image.sh  BuildImage.sh  Install-Application.sh  Install.sh
(+361 files in other folders)
