option('major', type : 'integer', value : 0, description : 'The major version of the OS build.')
option('minor', type : 'integer', value : 0, description : 'The minor version of the OS build.')
option('patch', type : 'integer', value : 0, description : 'The patch version of the OS build.')
option('prerelease', type : 'string', value : '"unversioned"', description : 'The prerelease label of the OS build.')